--- a/package.json
+++ b/package.json
@@ -1,27 +1,37 @@
 {
-  "name": "starkmole",
+  "name": "molestrike",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.2.3"
+    "@fortawesome/fontawesome-free": "^6.5.0",
+    "@radix-ui/react-avatar": "^1.1.6",
+    "autoprefixer": "^10.4.0",
+    "clsx": "^2.1.1",
+    "echarts": "^5.4.3",
+    "framer-motion": "^12.7.4",
+    "gsap": "^3.13.0",
+    "lucide-react": "^0.501.0",
+    "next": "^15.3.1",
+    "postcss": "^8.4.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "swiper": "^11.0.0",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.3",
-    "@eslint/eslintrc": "^3"
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "^14.0.0",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.0.0"
   }
 }
